--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ certifi==2020.12.5
 cffi==1.14.5
 chardet==4.0.0
 click==7.1.2
+dnspython==2.1.0
+email-validator==1.1.2
 Flask==1.1.2
 Flask-Bcrypt==0.7.1
 Flask-DebugToolbar==0.11.0
